# quick

./: .gitignore  CMakeLists.txt  CMakeSettings.json  make.cmd  makefile  readme.md
src/: main.cpp  main.hpp
